# opennexus

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  __next.!KGhvbWUp.__PAGE__.txt  __next.!KGhvbWUp.txt  __next._full.txt  __next._head.txt  __next._tree.txt  index.html  index.txt  justfile  llms-full.txt  llms.mdx  llms.txt
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: publish-homebrew-scoop.yml  publish-wrappers.yml
.nexus/: config.json  docs-sync-state.json
.nexus/commands/: nexus-1.3-context-sync.md  nexus-1.5-context-from-code.md  nexus-4-code.md  nexus-create-skill-from-codebase.md
.nexus/context/: .extract-allowlist  fumadocs
.nexus/marketplace/: registry.json
.nexus/templates/: PROJECT.md
.opencode/command/: nexus-context-sync.md  nexus-create-skill-from-codebase.md  nexus-git-commit.md
.opencode/rules/: e2e-tests  nextjs  python  rust
.opencode/skills/: context  e2e-tests  justfile  llms-txt  nextjs  opencode-rs-sdk  python  ratkit  rust  skill-from-codebase
404/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.html  index.txt
api/: search
apps/react-flow/: .gitignore  README.md  components.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
apps/restate-mvp/: package.json
apps/web/: .gitignore  components.json  package.json
docs/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt  index.html  index.txt  next.config.mjs  package.json
docs/cdd/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt  __next.docs.$oc$slug.txt  index.html  index.txt
docs/commands/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt  index.html  index.txt
docs/reference/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt  __next.docs.txt  index.html  index.txt
docs/skills/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt  __next.docs.txt  index.html  index.txt
justfiles/building/: build-release.just  build.just
justfiles/development/: dev.just  docs.just  electron.just  flow.just  marketplace-install.just  marketplace-list.just  ralph.just  (+4 more)
src/: cli.rs  constants.rs  error.rs  fuzzy.rs  lib.rs  main.rs  output.rs
tests/: context_sample_project_e2e.rs  hello_world_backfill.rs
wrappers/python/opennexus/: pyproject.toml
wrappers/python/opennexus/src/opennexus/: __init__.py
(+718 files in other folders)
