[workspace]
members = ["."]
resolver = "2"

[package]
name = "opennexus"
version = "0.1.7"
edition = "2021"
description = "Thin CLI client for the Nexus context-driven development system"
authors = ["Alpha"]
license = "MIT"
autobins = false

[lib]
name = "nexus_cli"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
include_dir = "0.7"
dialoguer = { version = "0.11", default-features = false, features = ["fuzzy-select"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.0"
regex = "1.11"
ctrlc = "3.4"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

[[bin]]
name = "docs-sync"
path = "src/bin/docs_sync.rs"

[[bin]]
name = "opennexus"
path = "src/main.rs"

[dev-dependencies]

[workspace.metadata.dev-dependencies]
# Allow optional RAG features to be toggled during development
# Heavy dependencies (lancedb, fastembed) are now optional via the `rag` feature
# Use: cargo build --features rag to enable RAG functionality
# Default builds exclude RAG to reduce compile time (~67s savings)
